fix responsiveness of shifts on helpers event page

--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -10,9 +10,13 @@
 }
 
 .event-shifts-list {
+  margin-top: 2em;
   h4 {
     margin-top: 0px;
     margin-bottom: 15px;
+  }
+  .calendar-icon {
+    margin-top: -0.5em
   }
 }
 
